--- a/src/app/demo/components/cotizador/formulario.component.css
+++ b/src/app/demo/components/cotizador/formulario.component.css
@@ -269,7 +269,16 @@
   font-weight: 600;
 }
 
+.form-actions{
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
 
+.panel-disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
 
 
 /* organizacion en formato celular */
