--- a/src/app/demo/components/lista-cotizaciones/lista-cotizaciones.component.html
+++ b/src/app/demo/components/lista-cotizaciones/lista-cotizaciones.component.html
@@ -77,7 +77,7 @@
             <input
             pInputText
             type="text"
-            placeholder="Buscar cotizaciones"
+            placeholder="Buscar descripción o tipo de envio"
             (input)="dt.filterGlobal($any($event.target).value, 'contains')"
             class="w-full"
             />
@@ -91,48 +91,45 @@
         [rows]="10"
         [rowHover]="true"
         responsiveLayout="scroll"
-        styleClass="p-datatable-sm"
+        styleClass="tbl-cotizaciones p-datatable-sm"
         [globalFilterFields]="[
-        'cantidad','ancho','largo','espesor',
-        'tipoEnvio','produccion',
-        'costoInicial','cantera','tipoBloque',
-        'costoMateriaPrima','embalaje']"
+        'tipoEnvio','descripcion']"
         >
 
         <!-- Header tabla -->
         <ng-template pTemplate="header">
           <tr>
-            <th style="min-width: 14rem;">Cantidad</th>
-            <th style="min-width: 14rem;">Ancho</th>
-            <th style="min-width: 14rem;">Largo</th>
-            <th style="min-width: 14rem;">Espesor</th>
-            <th style="min-width: 14rem;">Tipo de Envio</th>
-            <th style="min-width: 8rem;">Produccion</th>
-            <th style="min-width: 9rem;">Costo inicial</th>
-            <th style="min-width: 10rem;">Cantera</th>
-            <th style="min-width: 12rem;">Tipo Bloque</th>
+            <th style="min-width: 4rem;">Item</th>
+            <th style="min-width: 22rem;">Descripción</th>
+            <th style="min-width: 7rem;">Tipo de Envio</th>
+            <th style="min-width: 5rem;">Cantera</th>
+            <th style="min-width: 7rem;">Tipo Bloque</th>
+            <th style="min-width: 17rem;">Embalaje</th>
+            <th style="min-width: 8rem;">Cantidad</th>
+            <th style="min-width: 4rem;">U.M</th>
+            <th style="min-width: 3rem;">Costo inicial</th>
+            <th style="min-width: 3rem;">Costo Materia Prima</th>
+           <!-- <th style="min-width: 8rem;">Produccion</th>-->
             <!--<th style="min-width: 10rem;">Color</th>-->
-            <th style="min-width: 18rem;">Costo Materia Prima</th>
-            <th style="min-width: 18rem;">Embalaje</th>
-            <th style="min-width: 8rem; text-align:center;">Acciones</th>
+            <th style="min-width: 7rem; text-align:center;">Acciones</th>
           </tr>
         </ng-template>
 
         <!-- Body tabla -->
         <ng-template pTemplate="body" let-row let-ri="rowIndex">
           <tr>
-            <td>{{ row.cantidad }}</td>
-            <td>{{ row.ancho }}</td>
-            <td>{{ row.largo }}</td>
-            <td>{{ row.espesor }}</td>
-            <td>{{ row.tipoEnvio }}</td>
-            <td>{{ row.produccion }}</td>
-            <td>{{ row.costoInicial }}</td>
-            <td>{{ row.cantera }}</td>
-            <td>{{ row.tipoBloque }}</td>
-           <!-- <td>{{ row.color }}</td>-->
-            <td>{{ row.costoMateriaPrima }}</td>
-            <td>{{ row.embalaje }}</td>
+            <td class="td-center">{{ row.item }}</td>
+            <td class="td-left">{{ row.descripcion }}</td>
+            <td class="td-center">{{ row.tipoEnvio }}</td>
+            <td class="td-center">{{ row.cantera }}</td>
+            <td class="td-center">{{ row.tipoBloque }}</td>
+            <td class="td-center">{{ row.embalaje }}</td>
+            <td class="td-right">{{ row.cantidad }}</td>
+            <td class="td-center">{{ row.unidadMedida }}</td>
+            <td class="td-right">{{ row.costoInicial }}</td>
+            <td class="td-right">{{ row.costoMateriaPrima }}</td>
+            <!--<td>{{ row.produccion }}</td>-->
+           <!--<td>{{ row.color }}</td>-->
             <td class="text-center">
       <div class="flex justify-content-center gap-2">
         <button
@@ -159,7 +156,7 @@
           </tr>
         </ng-template>
 
-        <!-- Footer tabla -->
+        <!-- Footer tabla 
         <ng-template pTemplate="footer">
           <tr *ngIf="isEditing" [formGroup]="cotizacionForm">
             <td>
@@ -266,10 +263,11 @@
     </td>
         </tr>
       </ng-template>
+      -->
 
         <ng-template pTemplate="emptymessage">
           <tr>
-            <td colspan="13">No hay cotizaciones para mostrar</td>
+            <td colspan="14">No hay cotizaciones para mostrar</td>
           </tr>
         </ng-template>
       </p-table>
