--- a/src/app/demo/components/lista-cotizaciones/lista-cotizaciones.component.html
+++ b/src/app/demo/components/lista-cotizaciones/lista-cotizaciones.component.html
@@ -96,7 +96,8 @@
         'tipoEnvio','descripcion']"
         >
 
-        <!-- Header tabla -->
+        <!-- Header tabla 
+         
         <ng-template pTemplate="header">
           <tr>
             <th style="min-width: 4rem;">Item</th>
@@ -108,12 +109,154 @@
             <th style="min-width: 8rem;">Cantidad</th>
             <th style="min-width: 4rem;">U.M</th>
             <th style="min-width: 3rem;">Costo inicial</th>
-            <th style="min-width: 3rem;">Costo Materia Prima</th>
+            <th style="min-width: 3rem;">Costo Materia Prima</th>-->
            <!-- <th style="min-width: 8rem;">Produccion</th>-->
             <!--<th style="min-width: 10rem;">Color</th>-->
+            <!-- <th style="min-width: 7rem; text-align:center;">Acciones</th>
+          </tr>
+        </ng-template>-->
+
+
+
+
+
+        <!-- PRUEBA HEADER CON FILTRO-->
+         
+        <ng-template pTemplate="header">
+          <tr>
+            <th style="min-width: 4rem;">
+              <div class="flex align-items-center justify-content-between">
+                <span>Item</span>
+                <button 
+                pButton 
+                type="button" 
+                icon="pi pi-filter"
+                class="p-button-text p-button-rounded p-button-icon-only filter-btn"
+                (click)="openFilter($event, 'item')"></button>
+              </div>
+            </th>
+            
+            <th style="min-width: 22rem;">
+              <div class="flex align-items-center justify-content-between">
+                <span>Descripción</span>
+                <button 
+                pButton type="button" icon="pi pi-filter"
+                class="p-button-text p-button-rounded p-button-icon-only filter-btn"
+                (click)="openFilter($event, 'descripcion')"></button>
+              </div>
+            </th>
+            
+            <th style="min-width: 7rem;">
+              <div class="flex align-items-center justify-content-between">
+                <span>Tipo de Envio</span>
+                <button pButton type="button" icon="pi pi-filter"
+                class="p-button-text p-button-rounded p-button-icon-only filter-btn"
+                (click)="openFilter($event, 'tipoEnvio')"></button>
+              </div>
+            </th>
+            
+            <th style="min-width: 7rem;">
+              <div class="flex align-items-center justify-content-between">
+                <span>Cantera</span>
+                <button pButton type="button" icon="pi pi-filter"
+                class="p-button-text p-button-rounded p-button-icon-only filter-btn"
+                (click)="openFilter($event, 'cantera')"></button>
+              </div>
+            </th>
+            
+            <th style="min-width: 7rem;">
+              <div class="flex align-items-center justify-content-between">
+                <span>Tipo Bloque</span>
+                <button pButton type="button" icon="pi pi-filter"
+                class="p-button-text p-button-rounded p-button-icon-only filter-btn"
+                (click)="openFilter($event, 'tipoBloque')"></button>
+              </div>
+            </th>
+            
+            <th style="min-width: 7rem;">
+              <div class="flex align-items-center justify-content-between">
+                <span>Embalaje</span>
+                <button pButton type="button" icon="pi pi-filter"
+                class="p-button-text p-button-rounded p-button-icon-only filter-btn"
+                (click)="openFilter($event, 'embalaje')"></button>
+              </div>
+            </th>
+            
+            <th style="min-width: 7rem;">
+              <div class="flex align-items-center justify-content-between">
+                <span>Cantidad</span>
+                <button pButton type="button" icon="pi pi-filter"
+                class="p-button-text p-button-rounded p-button-icon-only filter-btn"
+                (click)="openFilter($event, 'cantidad')"></button>
+              </div>
+            </th>
+            
+            <th style="min-width: 7rem;">
+              <div class="flex align-items-center justify-content-between">
+                <span>U.M</span>
+                <button pButton type="button" icon="pi pi-filter"
+                class="p-button-text p-button-rounded p-button-icon-only filter-btn"
+                (click)="openFilter($event, 'unidadMedida')"></button>
+              </div>
+            
+            </th>
+            
+            <th style="min-width: 7rem;">
+              <div class="flex align-items-center justify-content-between">
+                <span>Costo inicial</span>
+                <button pButton type="button" icon="pi pi-filter"
+                class="p-button-text p-button-rounded p-button-icon-only filter-btn"
+                (click)="openFilter($event, 'costoInicial')"></button>
+              </div>
+            </th>
+            
+            <th style="min-width: 7rem;">
+              <div class="flex align-items-center justify-content-between">
+                <span>Costo Materia Prima</span>
+                <button pButton type="button" icon="pi pi-filter"
+                class="p-button-text p-button-rounded p-button-icon-only filter-btn"
+                (click)="openFilter($event, 'costoMateriaPrima')"></button>
+              </div>
+            </th>
+            
             <th style="min-width: 7rem; text-align:center;">Acciones</th>
           </tr>
+          
+          
+          <p-overlayPanel #filterPanel [dismissable]="true">
+            <div style="min-width:260px">
+              <div class="p-input-icon-left" style="width:100%">
+                <i class="pi pi-search"></i>
+                <input pInputText placeholder="Buscar"
+                [(ngModel)]="filterSearch"
+                (input)="filterOptions()"
+                style="width:100%" />
+              </div>
+              
+              <div class="mt-2 flex justify-content-between">
+                <a href="#" (click)="$event.preventDefault(); selectAllVisible()">Seleccionar todo</a>
+                <a href="#" (click)="$event.preventDefault(); clearAll()">Clear</a>
+              </div>
+              
+              <div class="mt-2" style="max-height:220px; overflow:auto">
+                <div *ngFor="let opt of filteredOptions" class="flex align-items-center gap-2 py-1">
+                  <p-checkbox [value]="opt" [(ngModel)]="tempSelection"></p-checkbox>
+                  <span>{{ opt || '(Blanks)' }}</span>
+                </div>
+              </div>
+              
+              <div class="mt-3 flex justify-content-end gap-2">
+                <button pButton type="button" label="Cancelar" class="p-button-text"
+                (click)="cancel(filterPanel)"></button>
+                
+                <button pButton type="button" label="Aceptar"
+                (click)="apply(filterPanel)"></button>
+              </div>
+            </div>
+          </p-overlayPanel>
         </ng-template>
+        
+
 
         <!-- Body tabla -->
         <ng-template pTemplate="body" let-row let-ri="rowIndex">
